tests/NormalTests/paczka1/fuzzy1/97856839.err
Error in line 1: A84 A84 19,3
Error in line 10: inNJIC A84 31,5
Error in line 4: nc9k A464 31,2
Error in line 22: nc9k S765 36,4
Error in line 33: xsQZcv0 S765 41,1
